Encoded URL on parse for embedded path parameters